Fix long links not being word-wrapped

--- a/src/dibgram/messenger/sections/navigation-menu/chat-list.scss
+++ b/src/dibgram/messenger/sections/navigation-menu/chat-list.scss
@@ -29,6 +29,7 @@
         letter-spacing: -0.15px;
 
         .link-button {
+            display: inline-block;
             margin-top: 17px;
         }
     }
