--- a/src/dibgram/messenger/sections/navigation-menu/hamburger-menu/menu.scss
+++ b/src/dibgram/messenger/sections/navigation-menu/hamburger-menu/menu.scss
@@ -85,14 +85,15 @@
                 letter-spacing: -1px;
                 margin-top: -3px;
 
-                button {
+                .link-button {
                     padding: 0;
                     color: var(--theme-color-windowSubTextFg);
                     font-weight: 400;
                     letter-spacing: -0.4px;
+                    font-size: 13px;
                 }
 
-                .row-1 button {
+                .row-1 .link-button {
                     font-weight: 500;
                     letter-spacing: -0.3px;
                 }
